...
                                    <constraint firstAttribute="height" constant="21" id="Vdu-PX-ahY"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6nI-aS-b86">
                                <rect key="frame" x="52" y="323" width="79" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="jC3-J5-3tN"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XQy-Nh-fYm">
                                <rect key="frame" x="168.5" y="358.5" width="38" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="login" identifier="Login" label="loginButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="76o-vX-Xon"/>
                                </constraints>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="login:" destination="BYZ-38-t0r" eventType="touchUpInside" id="D2t-ht-2O1"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eNR-9H-Arn">
                                <rect key="frame" x="139" y="260.5" width="97" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="userName"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="0Fx-CB-f0g"/>
                                    <constraint firstAttribute="width" constant="97" id="m9m-KO-BLf"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                    <view key="view" contentMode="scaleToFill" id="WLa-F1-38P">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bG9-P4-KCW">
                                <rect key="frame" x="163" y="318" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="switch"/>
                                <connections>
                                    <action selector="signin:" destination="AiS-vZ-51M" eventType="valueChanged" id="hpC-4e-LEm"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign in:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8l-Zk-eWS">
                                <rect key="frame" x="98.5" y="323" width="56.5" height="21"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6uh-xE-I6m">
                                <rect key="frame" x="172.5" y="257" width="30.5" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="timesLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="dpA-HC-QkM"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
...
